--- a/style.css
+++ b/style.css
@@ -17,7 +17,9 @@ body {
 .header-primary {
   color: #000;
   font-size: 3rem;
-  margin-bottom: 1.5rem; }
+  margin-bottom: 1.5rem;
+  display: flex;
+  justify-content: space-between; }
 
 .week-days {
   font-size: 1.4rem;
@@ -40,3 +42,9 @@ body {
   text-align: center;
   flex: 0 0 14.28%;
   height: 8rem; }
+
+.date-jump > * {
+  height: 2.5rem; }
+
+.date-jump input {
+  width: 6rem; }
